Picture not showing github page then checking issue

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
     width: 1440px;
     height: 652px;
     /* border: 1px solid tomato; */
-    background: url('/images/Hero-bg.png');
+    background: url('/images/html.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -214,7 +214,7 @@
     height: 217px;
 
     border: 1px solid tomato;
-    background: url('/assets/Layer_1.png');
+    background: url('/images/Layer_1.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -244,7 +244,7 @@
     height: 217px;
 
     border: 1px solid tomato;
-    background: url('/assets/Group\ 3.png');
+    background: url('/images/Group\ 3.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -274,7 +274,7 @@
     height: 217px;
 
     border: 1px solid tomato;
-    background: url('/assets/Group\ 4.png');
+    background: url('/images/Group\ 4.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -485,7 +485,7 @@
     border: 1px solid tomato;
     /*this border is exist in site*/
     margin-top: 49px;
-    background: url('/assets/handshake.jpg');
+    background: url('/images/handshake.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 16px;
